Создаёт страницу Фото и Видео, вносит мелкие правки в главную страницу

--- a/source/index.html
+++ b/source/index.html
@@ -39,16 +39,13 @@
   </header>
 
   <main class="page-main">
-    <h1 class="visually-hidden">Седона не Гранд-Каньон :)</h1>
 
-    <section class="salutation">
-      <header class="salutation__header">
-        <h2 class="visually-hidden">Добро пожаловать в Седону!</h2>
-        <img class="salutation__image" src="http://placehold.it/768x389" width="768" height="389" alt="Горный пейзаж Седоны">
-      </header>
-      <strong class="salutation__text">
+    <section class="page-cover">
+      <img class="page-cover__logo" src="http://placehold.it/282x214" width="282" height="214" alt="SEDONA">
+      <img class="page-cover__image" src="http://placehold.it/768x389" width="768" height="389" alt="Горный пейзаж Седоны">
+      <h1 class="page-cover__title">
         Седона — небольшой городок в Аризоне, заслуживающий большего!
-      </strong>
+      </h1>
     </section>
 
     <section class="features">
