Добавляет пару дополнительных обёрток

--- a/source/index.html
+++ b/source/index.html
@@ -9,130 +9,133 @@
 <body>
 
   <header class="page-header">
-    <a class="page-header__logo">
-      <img class="page-header__logo-image" src="http://placehold.it/102x83" width="102" height="83" alt="Седона">
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__open" type="button">
+    <div class="page-header__wrapper">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="http://placehold.it/102x83" width="102" height="83" alt="Седона">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__open" type="button">
         <span class="visually hidden">Открыть меню</span>
       </button>
-      <button class="main-nav__close" type="button">
+        <button class="main-nav__close" type="button">
         <span class="visually hidden">Закрыть меню</span>
       </button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--active">
-            <a>Главная</a>
-          </li>
-          <li class="site-list__item">
-            <a href="photo-and-video.html">Фото и видео</a>
-          </li>
-          <li class="site-list__item">
-            <a href="feedback.html">Форма отзыва</a>
-          </li>
-          <li class="site-list__item">
-            <a href="#">HTML Academy</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active">
+              <a>Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a href="photo-and-video.html">Фото и видео</a>
+            </li>
+            <li class="site-list__item">
+              <a href="feedback.html">Форма отзыва</a>
+            </li>
+            <li class="site-list__item">
+              <a href="#">HTML Academy</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </header>
 
   <main class="page-main">
 
     <section class="page-cover">
-      <img class="page-cover__logo" src="http://placehold.it/282x214" width="282" height="214" alt="SEDONA">
-      <img class="page-cover__image" src="http://placehold.it/768x389" width="768" height="389" alt="Горный пейзаж Седоны">
-      <h1 class="page-cover__title">
-        Седона — небольшой городок в Аризоне, заслуживающий большего!
-      </h1>
+      <div class="page-cover__wrapper">
+        <img class="page-cover__logo" src="http://placehold.it/282x214" width="282" height="214" alt="SEDONA">
+        <img class="page-cover__image" src="http://placehold.it/768x389" width="768" height="389" alt="Горный пейзаж Седоны">
+        <h1 class="page-cover__title">
+          Седона — небольшой городок в Аризоне, заслуживающий большего!
+        </h1>
+        <p class="page-cover__description">
+          Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!
+        </p>
+      </div>
     </section>
 
     <section class="features">
-      <header class="features__header">
+      <div class="features__wrapper">
         <h2 class="visually-hidden">Особенности Седоны</h2>
-        <p class="features__description">
-          Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!
-        </p>
-      </header>
-
-      <ul class="features__list">
-        <li class="features__item">
-          <div class="features__wrapper">
-            <div class="features__tile">
-              <h3 class="features__title">Настоящий городок</h3>
-              <p class="features__number">
-                — №1 —
-              </p>
-              <p class="features__description features__description--main-feature">
-                Седона не аттракцион для туристов, там течет своя жизнь
-              </p>
+        <ul class="features__list">
+          <li class="features__item">
+            <div class="features__wrapper">
+              <div class="features__tile">
+                <h3 class="features__title">Настоящий городок</h3>
+                <p class="features__number">
+                  — №1 —
+                </p>
+                <p class="features__description features__description--main-feature">
+                  Седона не аттракцион для туристов, там течет своя жизнь
+                </p>
+              </div>
+              <img class="features__image" src="http://placehold.it/800x400" width="800" height="400" alt="Обычный городок">
             </div>
-            <img class="features__image" src="http://placehold.it/800x400" width="800" height="400" alt="Обычный городок">
-          </div>
-          <ul class="features__wrapper recommended-list">
-            <li class="features__tile recommended-list__item">
-              <h4 class="features__title features__title--recommended">Жилье</h4>
-              <p class="features__description features__description--recommended">
-                Рекомендуем пожить в настоящем мотеле, все как в кино!
-              </p>
-            </li>
-            <li class="features__tile recommended-list__item">
-              <h4 class="features__title features__title--recommended">Сувениры</h4>
-              <p class="features__description features__description--recommended">
-                Не только китайского, но и местного производства!
-              </p>
-            </li>
-            <li class="features__tile recommended-list__item">
-              <h4 class="features__title features__title--recommended">Еда</h4>
-              <p class="features__description features__description--recommended">
-                Всегда заказывайте фирменный бергер, Вы не разочаруетесь!
-              </p>
-            </li>
-          </ul>
-        </li>
-        <li class="features__item">
-          <div class="features__wrapper">
-            <div class="features__tile">
-              <h3 class="features__title">Там есть мост дьявола</h3>
-              <p class="features__number">
-                — №2 —
-              </p>
-              <p class="features__description features__description--main-feature">
-                Да, по нему можно пройти! Если вы осмелитесь, конечно
-              </p>
+            <ul class="features__wrapper recommended-list">
+              <li class="features__tile recommended-list__item">
+                <h4 class="features__title features__title--recommended">Жилье</h4>
+                <p class="features__description features__description--recommended">
+                  Рекомендуем пожить в настоящем мотеле, все как в кино!
+                </p>
+              </li>
+              <li class="features__tile recommended-list__item">
+                <h4 class="features__title features__title--recommended">Сувениры</h4>
+                <p class="features__description features__description--recommended">
+                  Не только китайского, но и местного производства!
+                </p>
+              </li>
+              <li class="features__tile recommended-list__item">
+                <h4 class="features__title features__title--recommended">Еда</h4>
+                <p class="features__description features__description--recommended">
+                  Всегда заказывайте фирменный бергер, Вы не разочаруетесь!
+                </p>
+              </li>
+            </ul>
+          </li>
+          <li class="features__item">
+            <div class="features__wrapper">
+              <div class="features__tile">
+                <h3 class="features__title">Там есть мост дьявола</h3>
+                <p class="features__number">
+                  — №2 —
+                </p>
+                <p class="features__description features__description--main-feature">
+                  Да, по нему можно пройти! Если вы осмелитесь, конечно
+                </p>
+              </div>
+              <img class="features__image" src="http://placehold.it/800x400" width="800" height="400" alt="Обычный городок">
             </div>
-            <img class="features__image" src="http://placehold.it/800x400" width="800" height="400" alt="Обычный городок">
-          </div>
-        </li>
-        <li class="features__item features__tile">
-          <h3 class="features__title">Небольшая площадь</h3>
-          <p class="features__number">
-            — №3 —
-          </p>
-          <p class="features__description features__description--main-feature">
-            Все интересные места находятся очень близко
-          </p>
-        </li>
-        <li class="features__item features__tile">
-          <h3 class="features__title">Красивая дорога</h3>
-          <p class="features__number">
-            — №4 —
-          </p>
-          <p class="features__description features__description--main-feature">
-            Ехать в Седону из Лас-Вегаса совсем не скучно!
-          </p>
-        </li>
-        <li class="features__item features__tile">
-          <h3 class="features__title">Мало туристов</h3>
-          <p class="features__number">
-            — №5 —
-          </p>
-          <p class="features__description features__description--main-feature">
-            Большинство едет в гранд каньон и толпится там
-          </p>
-        </li>
-      </ul>
+          </li>
+          <li class="features__item features__tile">
+            <h3 class="features__title">Небольшая площадь</h3>
+            <p class="features__number">
+              — №3 —
+            </p>
+            <p class="features__description features__description--main-feature">
+              Все интересные места находятся очень близко
+            </p>
+          </li>
+          <li class="features__item features__tile">
+            <h3 class="features__title">Красивая дорога</h3>
+            <p class="features__number">
+              — №4 —
+            </p>
+            <p class="features__description features__description--main-feature">
+              Ехать в Седону из Лас-Вегаса совсем не скучно!
+            </p>
+          </li>
+          <li class="features__item features__tile">
+            <h3 class="features__title">Мало туристов</h3>
+            <p class="features__number">
+              — №5 —
+            </p>
+            <p class="features__description features__description--main-feature">
+              Большинство едет в гранд каньон и толпится там
+            </p>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <!--<section class="interest">
