--- a/source/photo-and-video.html
+++ b/source/photo-and-video.html
@@ -9,43 +9,45 @@
 <body>
 
   <header class="page-header">
-    <a class="page-header__logo">
-      <img class="page-header__logo-image" src="http://placehold.it/102x83" width="102" height="83" alt="Седона">
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__open" type="button">
+    <div class="page-header__wrapper">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="http://placehold.it/102x83" width="102" height="83" alt="Седона">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__open" type="button">
         <span class="visually hidden">Открыть меню</span>
       </button>
-      <button class="main-nav__close" type="button">
+        <button class="main-nav__close" type="button">
         <span class="visually hidden">Закрыть меню</span>
       </button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--active">
-            <a href="index.html">Главная</a>
-          </li>
-          <li class="site-list__item">
-            <a>Фото и видео</a>
-          </li>
-          <li class="site-list__item">
-            <a href="feedback.html">Форма отзыва</a>
-          </li>
-          <li class="site-list__item">
-            <a href="#">HTML Academy</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active">
+              <a href="index.html">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a>Фото и видео</a>
+            </li>
+            <li class="site-list__item">
+              <a href="feedback.html">Форма отзыва</a>
+            </li>
+            <li class="site-list__item">
+              <a href="#">HTML Academy</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </header>
 
   <main class="page-main">
 
     <section class="page-cover">
-      <img class="page-cover__logo" src="http://placehold.it/229x39" width="229" height="39" alt="SEDONA">
-      <img class="page-cover__image" src="http://placehold.it/768x389" width="768" height="389" alt="Горный пейзаж Седоны">
-      <h1 class="page-cover__title">
-        Фото и видео
-      </h1>
+      <div class="page-cover__wrapper">
+        <img class="page-cover__logo" src="http://placehold.it/229x39" width="229" height="39" alt="SEDONA">
+        <img class="page-cover__image" src="http://placehold.it/768x389" width="768" height="389" alt="Горный пейзаж Седоны">
+        <h1 class="page-cover__title">Фото и видео</h1>
+      </div>
     </section>
 
 
