--- a/source/photo-and-video.html
+++ b/source/photo-and-video.html
@@ -51,57 +51,59 @@
     </section>
 
     <section class="photo-gallery">
-      <h2 class="visually hidden">Галерея фотографий</h2>
-      <ul class="photo-gallery__tiles">
-        <li class="photo-gallery__tile photo-item">
-          <figure class="photo-item__image">
-            <img src="http://placehold.it/280x280" width="280" height="280" alt="Неродные просторы">
-          </figure>
-          <h3 class="photo-item__title">Неродные просторы</h3>
-          <p class="photo-item__author">Автор фото: Борис</p>
-          <a class="photo-item__like-btn" href="#">
-            <div class="photo-item__like-icon"></div>
-            <p class="photo-item__like-count">1350</p>
-            <span class="visually-hidden">Нравится</span>
-          </a>
-        </li>
-        <li class="photo-gallery__tile photo-item">
-          <figure class="photo-item__image">
-            <img src="http://placehold.it/280x280" width="280" height="280" alt="Местная растительность">
-          </figure>
-          <h3 class="photo-item__title">Местная растительность</h3>
-          <p class="photo-item__author">Автор фото: Сергей</p>
-          <a class="photo-item__like-btn" href="#">
-            <div class="photo-item__like-icon"></div>
-            <p class="photo-item__like-count">143</p>
-            <span class="visually-hidden">Нравится</span>
-          </a>
-        </li>
-        <li class="photo-gallery__tile photo-item">
-          <figure class="photo-item__image">
-            <img src="http://placehold.it/280x280" width="280" height="280" alt="Дорога на север">
-          </figure>
-          <h3 class="photo-item__title">Дорога на север</h3>
-          <p class="photo-item__author">Автор фото: Петр</p>
-          <a class="photo-item__like-btn" href="#">
-            <div class="photo-item__like-icon"></div>
-            <p class="photo-item__like-count">96</p>
-            <span class="visually-hidden">Нравится</span>
-          </a>
-        </li>
-        <li class="photo-gallery__tile photo-item">
-          <figure class="photo-item__image">
-            <img src="http://placehold.it/280x280" width="280" height="280" alt="Дорога на север">
-          </figure>
-          <h3 class="photo-item__title">Мост дьявола</h3>
-          <p class="photo-item__author">Автор фото: Антон</p>
-          <a class="photo-item__like-btn" href="#">
-            <div class="photo-item__like-icon"></div>
-            <p class="photo-item__like-count">254</p>
-            <span class="visually-hidden">Нравится</span>
-          </a>
-        </li>
-      </ul>
+      <div class="photo-gallery__wrapper">
+        <h2 class="visually hidden">Галерея фотографий</h2>
+        <ul class="photo-gallery__tiles">
+          <li class="photo-gallery__tile photo-item">
+            <figure class="photo-item__image">
+              <img src="http://placehold.it/280x280" width="280" height="280" alt="Неродные просторы">
+            </figure>
+            <h3 class="photo-item__title">Неродные просторы</h3>
+            <p class="photo-item__author">Автор фото: Борис</p>
+            <a class="photo-item__like-btn" href="#">
+              <div class="photo-item__like-icon"></div>
+              <p class="photo-item__like-count">1350</p>
+              <span class="visually-hidden">Нравится</span>
+            </a>
+          </li>
+          <li class="photo-gallery__tile photo-item">
+            <figure class="photo-item__image">
+              <img src="http://placehold.it/280x280" width="280" height="280" alt="Местная растительность">
+            </figure>
+            <h3 class="photo-item__title">Местная растительность</h3>
+            <p class="photo-item__author">Автор фото: Сергей</p>
+            <a class="photo-item__like-btn" href="#">
+              <div class="photo-item__like-icon"></div>
+              <p class="photo-item__like-count">143</p>
+              <span class="visually-hidden">Нравится</span>
+            </a>
+          </li>
+          <li class="photo-gallery__tile photo-item">
+            <figure class="photo-item__image">
+              <img src="http://placehold.it/280x280" width="280" height="280" alt="Дорога на север">
+            </figure>
+            <h3 class="photo-item__title">Дорога на север</h3>
+            <p class="photo-item__author">Автор фото: Петр</p>
+            <a class="photo-item__like-btn" href="#">
+              <div class="photo-item__like-icon"></div>
+              <p class="photo-item__like-count">96</p>
+              <span class="visually-hidden">Нравится</span>
+            </a>
+          </li>
+          <li class="photo-gallery__tile photo-item">
+            <figure class="photo-item__image">
+              <img src="http://placehold.it/280x280" width="280" height="280" alt="Мост дьявола">
+            </figure>
+            <h3 class="photo-item__title">Мост дьявола</h3>
+            <p class="photo-item__author">Автор фото: Антон</p>
+            <a class="photo-item__like-btn" href="#">
+              <div class="photo-item__like-icon"></div>
+              <p class="photo-item__like-count">254</p>
+              <span class="visually-hidden">Нравится</span>
+            </a>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <!--<section class="video">
