Создаёт страницу отзыва, вносит мелкие правки
Подредактированы тайтлы страниц

--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>HTML Academy: Седона</title>
+  <title>Седона — Главная страница</title>
 </head>
 
 <body>
@@ -45,7 +45,9 @@
     <section class="page-cover">
       <div class="page-cover__wrapper">
         <img class="page-cover__logo" src="http://placehold.it/282x214" width="282" height="214" alt="SEDONA">
-        <img class="page-cover__image" src="http://placehold.it/768x389" width="768" height="389" alt="Горный пейзаж Седоны">
+        <div class="page-cover__image page-cover__image--main-page">
+          <!--Фоновая картинка-->
+        </div>
         <h1 class="page-cover__title">
           Седона — небольшой городок в Аризоне, заслуживающий большего!
         </h1>
