Исправляет вложенность некоторых блоков
Перемещает page-cover__logo во внутрь блока с фоновой картинкой page-cover-image.
Переименовывает лишние features__wrapper в features__container.
Добавляет текст под заголовком страницы Фото и Видео

--- a/source/index.html
+++ b/source/index.html
@@ -44,9 +44,8 @@
 
     <section class="page-cover">
       <div class="page-cover__wrapper">
-        <img class="page-cover__logo" src="http://placehold.it/282x214" width="282" height="214" alt="SEDONA">
         <div class="page-cover__image page-cover__image--main-page">
-          <!--Фоновая картинка-->
+          <img class="page-cover__logo" src="http://placehold.it/282x214" width="282" height="214" alt="SEDONA">
         </div>
         <h1 class="page-cover__title">
           Седона — небольшой городок в Аризоне, заслуживающий большего!
@@ -62,7 +61,7 @@
         <h2 class="visually-hidden">Особенности Седоны</h2>
         <ul class="features__list">
           <li class="features__item">
-            <div class="features__wrapper">
+            <div class="features__container">
               <div class="features__tile">
                 <h3 class="features__title">Настоящий городок</h3>
                 <p class="features__number">
@@ -74,7 +73,7 @@
               </div>
               <img class="features__image" src="http://placehold.it/800x400" width="800" height="400" alt="Обычный городок">
             </div>
-            <ul class="features__wrapper recommended-list">
+            <ul class="features__container recommended-list">
               <li class="features__tile recommended-list__item">
                 <h4 class="features__title features__title--recommended">Жилье</h4>
                 <p class="features__description features__description--recommended">
@@ -96,7 +95,7 @@
             </ul>
           </li>
           <li class="features__item">
-            <div class="features__wrapper">
+            <div class="features__container">
               <div class="features__tile">
                 <h3 class="features__title">Там есть мост дьявола</h3>
                 <p class="features__number">
