--- a/source/photo-and-video.html
+++ b/source/photo-and-video.html
@@ -44,11 +44,13 @@
 
     <section class="page-cover">
       <div class="page-cover__wrapper">
-        <img class="page-cover__logo" src="http://placehold.it/229x39" width="229" height="39" alt="SEDONA">
         <div class="page-cover__image page-cover__image--secondary-page">
-          <!--Фоновая картинка-->
+          <img class="page-cover__logo" src="http://placehold.it/229x39" width="229" height="39" alt="SEDONA">
         </div>
         <h1 class="page-cover__title">Фото и видео</h1>
+        <p class="page-cover__description">
+          Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.
+        </p>
       </div>
     </section>
 
