Заменяет в кнопке лайка <a> на <button>

--- a/source/photo-and-video.html
+++ b/source/photo-and-video.html
@@ -64,11 +64,11 @@
             </figure>
             <h3 class="photo-item__title">Неродные просторы</h3>
             <p class="photo-item__author">Автор фото: Борис</p>
-            <a class="photo-item__like-btn" href="#">
-              <div class="photo-item__like-icon"></div>
+            <button class="photo-item__like-btn">
+              <div class="photo-item__like-icon"><!--Планирую поменять потом на псевдоэлемент--></div>
               <p class="photo-item__like-count">1350</p>
               <span class="visually-hidden">Нравится</span>
-            </a>
+            </button>
           </li>
           <li class="photo-gallery__tile photo-item">
             <figure class="photo-item__image">
