Убирает лишние модификаторы

--- a/source/index.html
+++ b/source/index.html
@@ -67,7 +67,7 @@
                 <p class="features__number">
                   — №1 —
                 </p>
-                <p class="features__description features__description--main-feature">
+                <p class="features__description">
                   Седона не аттракцион для туристов, там течет своя жизнь
                 </p>
               </div>
@@ -75,21 +75,21 @@
             </div>
             <ul class="features__container recommended-list">
               <li class="features__tile recommended-list__item">
-                <h4 class="features__title features__title--recommended">Жилье</h4>
-                <p class="features__description features__description--recommended">
+                <h4 class="features__title">Жилье</h4>
+                <p class="features__description">
                   Рекомендуем пожить в настоящем мотеле, все как в кино!
                 </p>
               </li>
               <li class="features__tile recommended-list__item">
-                <h4 class="features__title features__title--recommended">Сувениры</h4>
-                <p class="features__description features__description--recommended">
+                <h4 class="features__title">Сувениры</h4>
+                <p class="features__description">
                   Не только китайского, но и местного производства!
                 </p>
               </li>
               <li class="features__tile recommended-list__item">
-                <h4 class="features__title features__title--recommended">Еда</h4>
-                <p class="features__description features__description--recommended">
-                  Всегда заказывайте фирменный бергер, Вы не разочаруетесь!
+                <h4 class="features__title">Еда</h4>
+                <p class="features__description">
+                  Всегда заказывайте фирменный бургер, Вы не разочаруетесь!
                 </p>
               </li>
             </ul>
@@ -101,7 +101,7 @@
                 <p class="features__number">
                   — №2 —
                 </p>
-                <p class="features__description features__description--main-feature">
+                <p class="features__description">
                   Да, по нему можно пройти! Если вы осмелитесь, конечно
                 </p>
               </div>
@@ -113,7 +113,7 @@
             <p class="features__number">
               — №3 —
             </p>
-            <p class="features__description features__description--main-feature">
+            <p class="features__description">
               Все интересные места находятся очень близко
             </p>
           </li>
@@ -122,7 +122,7 @@
             <p class="features__number">
               — №4 —
             </p>
-            <p class="features__description features__description--main-feature">
+            <p class="features__description">
               Ехать в Седону из Лас-Вегаса совсем не скучно!
             </p>
           </li>
@@ -131,7 +131,7 @@
             <p class="features__number">
               — №5 —
             </p>
-            <p class="features__description features__description--main-feature">
+            <p class="features__description">
               Большинство едет в гранд каньон и толпится там
             </p>
           </li>
