Исправляет название класса visually-hidden, местами написанное через пробел

--- a/source/photo-and-video.html
+++ b/source/photo-and-video.html
@@ -15,10 +15,10 @@
       </a>
       <nav class="main-nav">
         <button class="main-nav__open" type="button">
-        <span class="visually hidden">Открыть меню</span>
+        <span class="visually-hidden">Открыть меню</span>
       </button>
         <button class="main-nav__close" type="button">
-        <span class="visually hidden">Закрыть меню</span>
+        <span class="visually-hidden">Закрыть меню</span>
       </button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
@@ -56,7 +56,7 @@
 
     <section class="photo-gallery">
       <div class="photo-gallery__wrapper">
-        <h2 class="visually hidden">Галерея фотографий</h2>
+        <h2 class="visually-hidden">Галерея фотографий</h2>
         <ul class="photo-gallery__tiles">
           <li class="photo-gallery__tile photo-item">
             <figure class="photo-item__image">
