--- a/source/feedback.html
+++ b/source/feedback.html
@@ -15,10 +15,10 @@
       </a>
       <nav class="main-nav">
         <button class="main-nav__open" type="button">
-        <span class="visually hidden">Открыть меню</span>
+        <span class="visually-hidden">Открыть меню</span>
       </button>
         <button class="main-nav__close" type="button">
-        <span class="visually hidden">Закрыть меню</span>
+        <span class="visually-hidden">Закрыть меню</span>
       </button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
