--- a/source/index.html
+++ b/source/index.html
@@ -14,12 +14,10 @@
         <img class="page-header__logo-image" src="http://placehold.it/102x83" width="102" height="83" alt="Седона">
       </a>
       <nav class="main-nav">
-        <button class="main-nav__open" type="button">
-        <span class="visually-hidden">Открыть меню</span>
-      </button>
-        <button class="main-nav__close" type="button">
-        <span class="visually-hidden">Закрыть меню</span>
-      </button>
+        <button class="main-nav__menu-btn" type="button">
+          <span class="main-nav__menu-closed visually-hidden">Открыть меню</span>
+          <span class="main-nav__menu-opened visually-hidden">Закрыть меню</span>
+        </button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
