--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Седона — Главная страница</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
