--- a/source/photo-and-video.html
+++ b/source/photo-and-video.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Седона — Фото и Видео</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
