Добавляет начальные стили мобильной версии
Добавляет фоновые цвета и картинки для блоков.
Устанавливает параметры текста.
Добавляет отступы крупных блоков.

--- a/source/feedback.html
+++ b/source/feedback.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Седона — Форма отзыва</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i%7CPT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
 
@@ -12,7 +14,7 @@
   <header class="page-header">
     <div class="page-header__wrapper">
       <a class="page-header__logo">
-        <img class="page-header__logo-image" src="http://placehold.it/102x83" width="102" height="83" alt="Седона">
+        <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
       </a>
       <nav class="main-nav">
         <button class="main-nav__menu-btn" type="button">
@@ -31,7 +33,7 @@
               <a>Форма отзыва</a>
             </li>
             <li class="site-list__item">
-              <a href="#">HTML Academy</a>
+              <a href="https://htmlacademy.ru">HTML Academy</a>
             </li>
           </ul>
         </div>
@@ -44,7 +46,7 @@
     <section class="page-cover">
       <div class="page-cover__wrapper">
         <div class="page-cover__image page-cover__image--secondary-page">
-          <img class="page-cover__logo" src="http://placehold.it/229x39" width="229" height="39" alt="SEDONA">
+          <img class="page-cover__logo" src="img/text-sedona.svg" width="229" height="39" alt="SEDONA">
         </div>
         <h1 class="page-cover__title">Оставьте свой отзыв</h1>
         <p class="page-cover__description">
@@ -78,7 +80,7 @@
           Разработано
         </p>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="copyright__logo-image" src="http://placehold.it/27x34" width="27" height="34" alt="HTML Academy">
+          <img class="copyright__logo-image" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy">
         </a>
       </div>
     </div>
