Вносит исправления отступов между блоками

--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <title>Седона — Главная страница</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i%7CPT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i%7CPT+Sans:400,700&amp;subset=cyrillic">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -44,7 +45,7 @@
   <main class="page-main">
 
     <section class="page-cover">
-      <div class="page-cover__wrapper">
+      <div class="page-cover__wrapper page-cover__wrapper--main-page">
         <div class="page-cover__image page-cover__image--main-page">
           <img class="page-cover__logo" src="img/text-sedona-index.svg" width="282" height="214" alt="SEDONA">
         </div>
@@ -106,7 +107,7 @@
                   Да, по нему можно пройти! Если вы осмелитесь, конечно
                 </p>
               </div>
-              <img class="features__image" src="img/photo-bridge-mobile@1x.jpg" width="800" height="400" alt="Обычный городок">
+              <img class="features__image" src="img/main-bridge-mobile@1x.jpg" width="800" height="400" alt="Обычный городок">
             </div>
           </li>
           <li class="features__item features__item--additional">
