Создаёт флекс-сетку основных блоков

--- a/source/photo-and-video.html
+++ b/source/photo-and-video.html
@@ -15,7 +15,10 @@
   <header class="page-header">
     <div class="page-header__wrapper">
       <a class="page-header__logo" href="index.html">
-        <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+          <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
+        </picture>
       </a>
       <nav class="main-nav">
         <button class="main-nav__menu-btn" type="button">
@@ -49,9 +52,9 @@
         <div class="page-cover__image page-cover__image--secondary-page">
           <img class="page-cover__logo" src="img/text-sedona.svg" width="229" height="39" alt="SEDONA">
         </div>
-        <h1 class="page-cover__title">Фото и видео</h1>
+        <h1 class="page-cover__title page-cover__title--secondary-page">Фото и видео</h1>
         <p class="page-cover__description">
-          Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.
+          Не можете решиться на путешествие из-за курса? <br>Фотографии помогут вам забыть о политике и экономике.
         </p>
       </div>
     </section>
@@ -62,51 +65,76 @@
         <ul class="photo-gallery__tiles">
           <li class="photo-gallery__tile photo-item">
             <figure class="photo-item__image">
-              <img src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Закат">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg">
+                <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg">
+                <img src="img/photo-sunset-mobile@1x.jpg" alt="Закат">
+              </picture>
+              <figcaption class="photo-item__info">
+                <h3 class="photo-item__title">Неродные просторы</h3>
+                <p class="photo-item__author">Автор фото: Борис</p>
+              </figcaption>
+              <button class="photo-item__like-btn" type="button">
+                <div class="photo-item__like-icon"><!--Планирую поменять потом на псевдоэлемент--></div>
+                <p class="photo-item__like-count">1350</p>
+                <span class="visually-hidden">Нравится</span>
+              </button>
             </figure>
-            <h3 class="photo-item__title">Неродные просторы</h3>
-            <p class="photo-item__author">Автор фото: Борис</p>
-            <button class="photo-item__like-btn" type="button">
-              <div class="photo-item__like-icon"><!--Планирую поменять потом на псевдоэлемент--></div>
-              <p class="photo-item__like-count">1350</p>
-              <span class="visually-hidden">Нравится</span>
-            </button>
           </li>
           <li class="photo-gallery__tile photo-item">
             <figure class="photo-item__image">
-              <img src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Кактус">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg">
+                <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg">
+                <img src="img/photo-cactus-mobile@1x.jpg" alt="Кактус">
+              </picture>
+              <figcaption class="photo-item__info">
+                <h3 class="photo-item__title">Местная растительность</h3>
+                <p class="photo-item__author">Автор фото: Сергей</p>
+              </figcaption>
+              <button class="photo-item__like-btn" type="button">
+                <div class="photo-item__like-icon"></div>
+                <p class="photo-item__like-count">143</p>
+                <span class="visually-hidden">Нравится</span>
+              </button>
             </figure>
-            <h3 class="photo-item__title">Местная растительность</h3>
-            <p class="photo-item__author">Автор фото: Сергей</p>
-            <button class="photo-item__like-btn" type="button">
-              <div class="photo-item__like-icon"></div>
-              <p class="photo-item__like-count">143</p>
-              <span class="visually-hidden">Нравится</span>
-            </button>
           </li>
           <li class="photo-gallery__tile photo-item">
             <figure class="photo-item__image">
-              <img src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Дороги">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg">
+                <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg">
+                <img src="img/photo-roads-mobile@1x.jpg" alt="Дороги">
+              </picture>
+              <figcaption class="photo-item__info">
+                <h3 class="photo-item__title">Дорога на север</h3>
+                <p class="photo-item__author">Автор фото: Петр</p>
+              </figcaption>
+              <button class="photo-item__like-btn" type="button">
+                <div class="photo-item__like-icon"></div>
+                <p class="photo-item__like-count">96</p>
+                <span class="visually-hidden">Нравится</span>
+              </button>
             </figure>
-            <h3 class="photo-item__title">Дорога на север</h3>
-            <p class="photo-item__author">Автор фото: Петр</p>
-            <button class="photo-item__like-btn" type="button">
-              <div class="photo-item__like-icon"></div>
-              <p class="photo-item__like-count">96</p>
-              <span class="visually-hidden">Нравится</span>
-            </button>
+
           </li>
           <li class="photo-gallery__tile photo-item">
             <figure class="photo-item__image">
-              <img src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Мост">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg">
+                <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg">
+                <img src="img/photo-bridge-mobile@1x.jpg" alt="Мост">
+              </picture>
+              <figcaption class="photo-item__info">
+                <h3 class="photo-item__title">Мост дьявола</h3>
+                <p class="photo-item__author">Автор фото: Антон</p>
+              </figcaption>
+              <button class="photo-item__like-btn" type="button">
+                <div class="photo-item__like-icon"></div>
+                <p class="photo-item__like-count">254</p>
+                <span class="visually-hidden">Нравится</span>
+              </button>
             </figure>
-            <h3 class="photo-item__title">Мост дьявола</h3>
-            <p class="photo-item__author">Автор фото: Антон</p>
-            <button class="photo-item__like-btn" type="button">
-              <div class="photo-item__like-icon"></div>
-              <p class="photo-item__like-count">254</p>
-              <span class="visually-hidden">Нравится</span>
-            </button>
           </li>
         </ul>
       </div>
@@ -137,12 +165,12 @@
           Разработано
         </p>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="copyright__logo-image" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy">
+          <img class="copyright__logo-image" src="img/htmlacademy.svg" width="34" height="34" alt="HTML Academy">
         </a>
       </div>
     </div>
   </footer>
-
+  <script src="js/picturefill.min.js"></script>
 </body>
 
 </html>
