--- a/source/feedback.html
+++ b/source/feedback.html
@@ -15,7 +15,10 @@
   <header class="page-header">
     <div class="page-header__wrapper">
       <a class="page-header__logo" href="index.html">
-        <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+          <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
+        </picture>
       </a>
       <nav class="main-nav">
         <button class="main-nav__menu-btn" type="button">
@@ -49,7 +52,7 @@
         <div class="page-cover__image page-cover__image--secondary-page">
           <img class="page-cover__logo" src="img/text-sedona.svg" width="229" height="39" alt="SEDONA">
         </div>
-        <h1 class="page-cover__title">Оставьте свой отзыв</h1>
+        <h1 class="page-cover__title page-cover__title--secondary-page">Оставьте свой отзыв</h1>
         <p class="page-cover__description">
           Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях
         </p>
@@ -81,12 +84,12 @@
           Разработано
         </p>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="copyright__logo-image" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy">
+          <img class="copyright__logo-image" src="img/htmlacademy.svg" width="34" height="34" alt="HTML Academy">
         </a>
       </div>
     </div>
   </footer>
-
+  <script src="js/picturefill.min.js"></script>
 </body>
 
 </html>
