--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,10 @@
   <header class="page-header">
     <div class="page-header__wrapper">
       <a class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+          <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
+        </picture>
       </a>
       <nav class="main-nav">
         <button class="main-nav__menu-btn" type="button">
@@ -65,7 +68,7 @@
           <li class="features__item">
             <div class="features__container">
               <div class="features__tile features__tile--top-feature">
-                <h3 class="features__title features__title--top-feature">Настоящий городок</h3>
+                <h3 class="features__title features__title--top-feature">Настоящий <br>городок</h3>
                 <p class="features__number">
                   — №1 —
                 </p>
@@ -73,13 +76,17 @@
                   Седона не аттракцион для туристов, там течет своя жизнь
                 </p>
               </div>
-              <img class="features__image" src="img/main-city-mobile@1x.jpg" width="800" height="400" alt="Обычный городок">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg">
+                <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg">
+                <img class="features__image" src="img/main-city-mobile@1x.jpg" alt="Обычный городок">
+              </picture>
             </div>
             <ul class="features__container recommended-list">
               <li class="recommended-list__item">
                 <h4 class="recommended-list__title">Жилье</h4>
                 <p class="recommended-list__description">
-                  Рекомендуем пожить в настоящем мотеле, все как в кино!
+                  Рекомендуем пожить в настоящем мотеле, все&nbsp;как в кино!
                 </p>
               </li>
               <li class="recommended-list__item">
@@ -91,7 +98,7 @@
               <li class="recommended-list__item">
                 <h4 class="recommended-list__title">Еда</h4>
                 <p class="recommended-list__description">
-                  Всегда заказывайте фирменный бургер, Вы не разочаруетесь!
+                  Всегда заказывайте фирменный бургер, Вы&nbsp;не разочаруетесь!
                 </p>
               </li>
             </ul>
@@ -99,7 +106,7 @@
           <li class="features__item">
             <div class="features__container">
               <div class="features__tile features__tile--top-feature">
-                <h3 class="features__title features__title--top-feature">Там есть мост дьявола</h3>
+                <h3 class="features__title features__title--top-feature">Там есть <br>Мост Дьявола</h3>
                 <p class="features__number">
                   — №2 —
                 </p>
@@ -107,11 +114,15 @@
                   Да, по нему можно пройти! Если вы осмелитесь, конечно
                 </p>
               </div>
-              <img class="features__image" src="img/main-bridge-mobile@1x.jpg" width="800" height="400" alt="Обычный городок">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg">
+                <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg">
+                <img class="features__image" src="img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="Мост Дьявола">
+              </picture>
             </div>
           </li>
           <li class="features__item features__item--additional">
-            <h3 class="features__title features__title--additional">Небольшая площадь</h3>
+            <h3 class="features__title features__title--additional">Небольшая<br> площадь</h3>
             <p class="features__number">
               — №3 —
             </p>
@@ -120,21 +131,21 @@
             </p>
           </li>
           <li class="features__item features__item--additional">
-            <h3 class="features__title features__title--additional">Красивая дорога</h3>
+            <h3 class="features__title features__title--additional">Красивая<br> дорога</h3>
             <p class="features__number">
               — №4 —
             </p>
             <p class="features__description">
-              Ехать в Седону из Лас-Вегаса совсем не скучно!
+              Ехать в Седону из Лас&#8209;Вегаса совсем не&nbsp;скучно!
             </p>
           </li>
           <li class="features__item features__item--additional">
-            <h3 class="features__title features__title--additional">Мало туристов</h3>
+            <h3 class="features__title features__title--additional">Мало<br> туристов</h3>
             <p class="features__number">
               — №5 —
             </p>
             <p class="features__description">
-              Большинство едет в гранд каньон и толпится там
+              Большинство едет в Гранд&nbsp;Каньон и толпится там
             </p>
           </li>
         </ul>
@@ -166,12 +177,12 @@
           Разработано
         </p>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="copyright__logo-image" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy">
+          <img class="copyright__logo-image" src="img/htmlacademy.svg" width="34" height="34" alt="HTML Academy">
         </a>
       </div>
     </div>
   </footer>
-
+  <script src="js/picturefill.min.js"></script>
 </body>
 
 </html>
