--- a/source/photo-and-video.html
+++ b/source/photo-and-video.html
@@ -11,7 +11,7 @@
 <body>
   <svg style="display: none;">
     <symbol id="like-btn" viewBox="0 0 22 20">
-      <path d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z"/>
+      <path d="M12.383 3.646L11.22 9h8.68v2 .058L17 18H8V8.03l.014-.015 4.37-4.368M2 10v8-8M13.2 0L6.6 6.6c-.4.3-.6.8-.6 1.4v10c0 1.1.9 2 2 2h9c.8 0 1.5-.5 1.8-1.2l3-7.1c.1-.2.1-.5.1-.7V9h.1c0-1.1-.9-2-2-2h-6.3l1-4.6v-.3c0-.4-.2-.8-.4-1.1l-1.1-1zM4 8H0v12h4V8zm18 1v.044V9z"/>
     </symbol>
   </svg>
   <div class="page-wrapper">
@@ -164,10 +164,7 @@
             <a class="social__link social__link--twitter" href="#">
 
               <svg width="18" height="15">
-                <path class="st0" d="M11.6,0.2c1.7-0.5,3.2,0.2,3.8,1.1c0.7-0.2,1.4-0.5,2.2-0.7c0,0.8-0.5,1.5-0.9,1.7C17.4,2.5,18,1.8,18,1.8
-			c-0.2,1-1,1.7-1.6,2.1C16.1,10.7,13,15.2,5.7,15c-0.5,0,0.1,0-0.5,0c-0.4,0-4.4-0.4-5.1-1.9c2.4,0.2,4.1-0.4,4.9-1.1
-			c-1-0.3-2.9-0.5-3.2-3c0.4,0.1,0.6,0.2,1.3,0.1C1.9,8.3,0.4,7.6,0.5,5.3C0.8,5.6,1.6,5.8,2,5.8C1.2,5.6-0.1,2.4,1,0.9
-			c2,1.9,3.9,3.6,7.6,3.8C8.7,2.3,9.8,0.8,11.6,0.2z"/>
+                <path d="M11.6.2c1.7-.5 3.2.2 3.8 1.1l2.2-.7c0 .8-.5 1.5-.9 1.7.7.2 1.3-.5 1.3-.5-.2 1-1 1.7-1.6 2.1C16.1 10.7 13 15.2 5.7 15c-.5 0 .1 0-.5 0-.4 0-4.4-.4-5.1-1.9 2.4.2 4.1-.4 4.9-1.1-1-.3-2.9-.5-3.2-3 .4.1.6.2 1.3.1C1.9 8.3.4 7.6.5 5.3c.3.3 1.1.5 1.5.5-.8-.2-2.1-3.4-1-4.9 2 1.9 3.9 3.6 7.6 3.8.1-2.4 1.2-3.9 3-4.5z" fill="#fff"/>
               </svg>
 
               <span class="visually-hidden">Мы в Твиттере</span>
@@ -177,8 +174,7 @@
             <a class="social__link social__link--facebook" href="#">
 
               <svg width="9" height="19">
-                <path d="M6.5,3.4c0.8,0,1.7,0,2.5,0C9,2.3,9,1.2,9,0C8,0,7,0,6,0C2.8,0.2,1.6,2.4,2,6.1H0v3.5h2.1c0,3.1,0,6.2,0,9.3
-	c1.3,0,2.7,0,3.9,0c0-3.1,0-6.2,0-9.3h3V6.1H6C6,5.1,6,3.7,6.5,3.4z"/>
+                <path d="M6.5 3.4H9V0H6C2.8.2 1.6 2.4 2 6.1H0v3.5h2.1v9.3H6V9.6h3V6.1H6c0-1 0-2.4.5-2.7z"/>
               </svg>
 
               <span class="visually-hidden">Мы в Фейсбуке</span>
@@ -188,8 +184,7 @@
             <a class="social__link social__link--youtube" href="#">
 
               <svg width="20" height="14">
-                <path d="M17.2,0H2.8C1.3,0,0,1.3,0,2.8v8.3C0,12.7,1.3,14,2.8,14h14.4c1.6,0,2.8-1.3,2.8-2.8V2.8C20.1,1.3,18.8,0,17.2,0z M7,10.4
-	V3.6L13.9,7L7,10.4z"/>
+                <path d="M17.2 0H2.8C1.3 0 0 1.3 0 2.8v8.3C0 12.7 1.3 14 2.8 14h14.4c1.6 0 2.8-1.3 2.8-2.8V2.8c.1-1.5-1.2-2.8-2.8-2.8zM7 10.4V3.6L13.9 7 7 10.4z"/>
               </svg>
 
               <span class="visually-hidden">Мы на Ютьюбе</span>
@@ -204,10 +199,7 @@
 
             <svg class="copyright__logo-image" width="27px" height="34px">
               <title>HtmlAcademy</title>
-              <path d="M13.6,0l-0.1,0L0,1.4v24.7l13.5,8l13.4-8l0,0V1.4L13.6,0z M25,12.1L13.5,5.3l0-0.1l-0.1,0.1l-0.1-0.1v0.1L1.9,12.1v-9
-	              l11.5-1.2L25,3.1L25,12.1L25,12.1z M13.4,6.8l11.5,6.7l-4.5,2.6l-7.1-4.2l0,1.4l5.9,3.5l-0.9,0.5l-5-3l0,1.4l3.8,2.3l-0.8,0.5
-	              l-3-1.8l0,1.4l1.9,1.1l-1.8,1.1L2,13.6L13.4,6.8z M1.9,15.1l11.4,6.8l0,1l-7.9-4.7l0,1.4l8,4.8l0,1.1l-8-4.7l0,1.4l8,4.8l0,0
-	              l8.1-4.9l0-5.2l3.4-2v10l-11.5,6.9L1.9,25V15.1z"/>
+              <path d="M13.62.017L13.472 0 0 1.412v24.66L13.473 34.1l13.472-8.015V1.412L13.62.017zm11.4 12.1L13.495 5.334l-.001-.104-.087.05-.088-.056v.11L1.925 12.118v-8.97l11.548-1.212L25.02 3.147v8.98zm-11.614-5.34L24.923 13.5l-4.48 2.64-7.093-4.22-.014 1.415 5.904 3.513-.86.507-5.03-2.992-.014 1.415 3.827 2.275-.782.523-3.03-1.787-.014 1.413 1.853 1.09-1.8 1.08-11.356-6.75 11.37-6.835zm-11.48 8.34l11.41 6.79.016 1.044L5.4 18.234l-.015 1.416 7.98 4.795.018 1.076-7.973-4.74-.013 1.414 8.067 4.847 8.143-4.872-.01-5.177 3.415-2.036v10.02L13.472 31.85 1.925 24.98v-9.852z"/>
             </svg>
 
           </a>
