--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,10 @@
   <title>Седона — Главная страница</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
@@ -75,9 +79,9 @@
                   </p>
                 </div>
                 <picture class="features__image">
-                  <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg">
-                  <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg">
-                  <img src="img/main-city-mobile@1x.jpg" alt="Обычный городок">
+                  <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg 1x, img/main-city-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg 1x, img/main-city-tablet@2x.jpg 2x">
+                  <img src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg 2x" alt="Обычный городок">
                 </picture>
               </div>
               <ul class="features__container recommended-list">
@@ -113,9 +117,9 @@
                   </p>
                 </div>
                 <picture class="features__image">
-                  <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg">
-                  <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg">
-                  <img src="img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="Мост Дьявола">
+                  <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg 1x, img/main-bridge-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg 1x, img/main-bridge-tablet@2x.jpg 2x">
+                  <img src="img/main-bridge-mobile@1x.jpg" srcset="img/main-bridge-mobile@2x.jpg 2x" width="320" height="260" alt="Мост Дьявола">
                 </picture>
               </div>
             </li>
@@ -166,9 +170,9 @@
         <div class="location__wrapper">
           <h2 class="visually-hidden">Расположение Седоны</h2>
           <picture>
-            <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.jpg">
-            <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.jpg">
-            <img class="location__map" src="img/bg-map-mobile@1x.jpg" width="320" height="350" alt="Карта расположения города">
+            <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.jpg 1x, img/bg-map-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.jpg 1x, img/bg-map-tablet@2x.jpg 2x">
+            <img class="location__map" src="img/bg-map-mobile@1x.jpg" srcset="img/bg-map-mobile@2x.jpg 2x" width="320" height="350" alt="Карта расположения города">
           </picture>
         </div>
       </section>
