--- a/source/photo-and-video.html
+++ b/source/photo-and-video.html
@@ -6,6 +6,10 @@
   <title>Седона — Фото и Видео</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
@@ -69,9 +73,9 @@
             <li class="photo-gallery__tile photo-gallery__tile--wide">
               <div class="photo-item">
                 <picture>
-                  <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg">
-                  <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg">
-                  <img src="img/photo-sunset-mobile@1x.jpg" alt="Закат">
+                  <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
+                  <img src="img/photo-sunset-mobile@1x.jpg" srcset="img/photo-sunset-mobile@2x.jpg 2x" alt="Закат">
                 </picture>
                 <div class="photo-item__footer">
                   <div class="photo-item__info">
@@ -91,9 +95,9 @@
             <li class="photo-gallery__tile">
               <div class="photo-item">
                 <picture>
-                  <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg">
-                  <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg">
-                  <img src="img/photo-cactus-mobile@1x.jpg" alt="Кактус">
+                  <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg 1x, img/photo-cactus-tablet@2x.jpg 2x">
+                  <img src="img/photo-cactus-mobile@1x.jpg" srcset="img/photo-cactus-mobile@2x.jpg 2x" alt="Кактус">
                 </picture>
                 <div class="photo-item__footer">
                   <div class="photo-item__info">
@@ -113,9 +117,9 @@
             <li class="photo-gallery__tile">
               <div class="photo-item">
                 <picture>
-                  <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg">
-                  <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg">
-                  <img src="img/photo-roads-mobile@1x.jpg" alt="Дороги">
+                  <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg 1x, img/photo-roads-tablet@2x.jpg 2x">
+                  <img src="img/photo-roads-mobile@1x.jpg" srcset="img/photo-roads-mobile@2x.jpg 2x" alt="Дороги">
                 </picture>
                 <div class="photo-item__footer">
                   <div class="photo-item__info">
@@ -135,9 +139,9 @@
             <li class="photo-gallery__tile">
               <div class="photo-item">
                 <picture>
-                  <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg">
-                  <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg">
-                  <img src="img/photo-bridge-mobile@1x.jpg" alt="Мост">
+                  <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg 1x, img/photo-bridge-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg 1x, img/photo-bridge-tablet@2x.jpg 2x">
+                  <img src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg 2x" alt="Мост">
                 </picture>
                 <div class="photo-item__footer">
                   <div class="photo-item__info">
